# coditor

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  imgui.ini
.cache/clangd/index/: egl_context.c.454D87F4B9810482.idx  glfw3.h.533AD6F7DED75266.idx  glfw3native.h.CBCE1E3B4BF7DCE3.idx  input.c.F3DCA06AC4DE14A4.idx  internal.h.D76A2B21043C6A0A.idx  mappings.h.2C03077C99C3FA51.idx  monitor.c.1808324A7A93DDBF.idx  null_joystick.h.10BA5779D404A88B.idx  null_platform.h.270D36AB424936D8.idx  null_window.c.35265084C24071BC.idx  platform.h.B67406D026125AD6.idx  win32_joystick.h.9922855FEEE33661.idx  win32_platform.h.B7DFB480E0A031F0.idx  win32_thread.c.BE40FF6E7625A683.idx  win32_thread.h.A9F7EED54F36C6D8.idx  win32_time.h.47B227D1543D09B6.idx  win32_window.c.05D5650EFAF4FB5B.idx  window.c.CA5D6AE7B29F2267.idx
src/: code_editor.h  coditor.cpp  coditor.h  file_explorer.cpp  file_explorer.h
